# godopty

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
crates/godopty-cli/: Cargo.toml  README.md
crates/godopty-cli/src/: main.rs
crates/godopty-core/: Cargo.toml  README.md
crates/godopty-core/src/: color.rs  concept.rs  engine.rs  history.rs  keymap.rs  lib.rs  parser.rs  pty.rs  term.rs  types.rs
crates/godopty-core/tests/: tile_layout.rs
crates/godopty-gdext/: Cargo.toml  README.md
crates/godopty-gdext/src/: lib.rs
godot/: .gutconfig.json  README.md  concepts.default.json  export_presets.cfg  godopty.gdextension  godopty.gdextension.uid  project.godot
godot/assets/fonts/: Phosphor-Regular.ttf.import
godot/fonts/: DejaVuSansMono-Bold.ttf.import  DejaVuSansMono-Oblique.ttf.import  DejaVuSansMono.ttf.import
godot/scenes/: code_viewer.gd  concept_manager.gd  file_tree.gd  file_tree.gd.uid  focus_manager.gd  icons.gd  layout_manager.gd  layout_manager.gd.uid  main.tscn  observer_pane.gd  observer_pane.gd.uid  profile_manager.gd  settings_manager.gd  settings_manager.gd.uid  settings_panel.gd  shortcut_manager.gd  sidebar.gd  terminal.gd  terminal.gd.uid  terminal_manager.gd  terminal_pane.gd  toast_manager.gd  toast_manager.gd.uid  toast_overlay.gd  toast_overlay.gd.uid  workspace.gd  workspace.gd.uid
godot/scenes/autoloads/: base_persistence_manager.gd  (+13 more)
godot/schemes/: dracula.txt  solarized-dark.txt  vivid.txt
godot/shaders/: crt.gdshader  crt.gdshader.uid
(+46 files in other folders)
