[package]
name = "godopty-cli"
version = "0.1.0"
edition = "2024"
description = "Phase 1 CLI prototype for godopty — validates the concept orchestration engine"

[dependencies]
godopty-core = { path = "../godopty-core" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
regex = "1"
log = "0.4"
