[package]
name = "godopty-gdext"
version = "0.1.0"
edition = "2024"
description = "Godot 4 GDExtension for godopty — bridges the Rust terminal engine to Godot's renderer"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.5", features = ["api-4-4"] }
godopty-core = { path = "../godopty-core" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
log = "0.4"
regex = "1"
